if(BUILD_TESTING)
    file(GLOB TEST_SRC test_*.cpp)
    add_executable(Test ${TEST_SRC})
    target_link_system_library(Test PRIVATE gtest_main)
    target_link_system_library(Test PRIVATE Eigen)
    target_link_system_library(Test PRIVATE matplotlib_cpp)

    include(GoogleTest)
    gtest_discover_tests(Test)
endif(BUILD_TESTING)
